auth node added

--- a/zoom/auth.html
+++ b/zoom/auth.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('zoom-session', {
+    RED.nodes.registerType('zoom-auth', {
       category: 'config',
       color: '#8BBDD9',
       defaults: {
@@ -36,7 +36,7 @@
     });
 </script>
 
-<script type="text/x-red" data-template-name="zoom-session">
+<script type="text/x-red" data-template-name="zoom-auth">
     <div class="form-row">
         <label style="margin-left: 20px;" for="node-config-input-name" >Name</label>
         <input type="text" id="node-config-input-name"></input>
