--- a/src/nodes/zoomAuth/zoomAuth.node.html
+++ b/src/nodes/zoomAuth/zoomAuth.node.html
@@ -108,6 +108,10 @@
         <input type="password" id="node-config-input-access_token"></input>
     </div>
     <div class="form-row">
+        <label for="node-config-input-expiry_date">expiry_date</label>
+        <input type="text" id="node-config-input-expiry_date"></input>
+    </div>
+    <div class="form-row">
         <label for="node-config-input-referenceId">referenceId</label>
         <input type="password" id="node-config-input-referenceId"></input>
     </div>
